--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -121,6 +121,8 @@
     <Compile Include="Channels\Configuration\Internal\WcfChannelConnectionConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\WcfChannelConnectionConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\Internal\CreateChannelConnection.cs" />
+    <Compile Include="Channels\DelegateInstanceProvider.cs" />
+    <Compile Include="Channels\InstanceProvider.cs" />
     <Compile Include="Channels\Internal\AsyncResult.cs" />
     <Compile Include="Channels\ChannelConnection.cs" />
     <Compile Include="Channels\ChannelFactory.cs" />
