Working on Instance channel bits to make more flexible

--- a/src/Magnum.Infrastructure.Specs/Magnum.Infrastructure.Specs.csproj
+++ b/src/Magnum.Infrastructure.Specs/Magnum.Infrastructure.Specs.csproj
@@ -99,6 +99,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Channels\Load_Specs.cs" />
     <Compile Include="Channels\NHibernateInstanceChannel_Specs.cs" />
     <Compile Include="Channels\NHibernate_Specs.cs" />
     <Compile Include="Channels\TestInstance.cs" />
