--- a/src/Magnum.Infrastructure.Specs/App.config
+++ b/src/Magnum.Infrastructure.Specs/App.config
@@ -15,7 +15,7 @@
 			<property name="adonet.batch_size">100</property>
 			<property name="default_schema">dbo</property>
 			<property name="dialect">NHibernate.Dialect.MsSql2005Dialect</property>
-			<property name="show_sql">true</property>
+			<property name="show_sql">false</property>
 			<property name="use_outer_join">true</property>
 		</session-factory>
 	</hibernate-configuration>
