Getting NHibernate mapped into the channel network

--- a/src/Magnum.Infrastructure.Specs/Magnum.Infrastructure.Specs.csproj
+++ b/src/Magnum.Infrastructure.Specs/Magnum.Infrastructure.Specs.csproj
@@ -101,6 +101,7 @@
   <ItemGroup>
     <Compile Include="Channels\Load_Specs.cs" />
     <Compile Include="Channels\NHibernateInstanceChannel_Specs.cs" />
+    <Compile Include="Channels\NHibernateSubscription_Specs.cs" />
     <Compile Include="Channels\NHibernate_Specs.cs" />
     <Compile Include="Channels\TestInstance.cs" />
     <Compile Include="Channels\TestInstanceMap.cs" />
