--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -216,14 +216,19 @@
     <Compile Include="Configuration\Internal\ConfigurationBinderContext.cs" />
     <Compile Include="Configuration\ConfigurationBinderFactory.cs" />
     <Compile Include="Extensions\ExtensionsToUri.cs" />
+    <Compile Include="Fibers\Configuration\FiberConfigurationException.cs" />
+    <Compile Include="Fibers\Configuration\FiberProviderConfigurator.cs" />
+    <Compile Include="Fibers\FiberCache.cs" />
     <Compile Include="Fibers\Fiber.cs" />
     <Compile Include="Fibers\FiberException.cs" />
+    <Compile Include="Fibers\FiberProvider.cs" />
     <Compile Include="Fibers\Scheduler.cs" />
     <Compile Include="Fibers\ScheduledAction.cs" />
     <Compile Include="Fibers\Internal\ExecuteScheduledAction.cs" />
     <Compile Include="Fibers\Internal\ScheduledActionList.cs" />
     <Compile Include="Fibers\Internal\SingleScheduledAction.cs" />
     <Compile Include="Fibers\SynchronousFiber.cs" />
+    <Compile Include="Fibers\SharedFiberProvider.cs" />
     <Compile Include="Fibers\ThreadFiber.cs" />
     <Compile Include="Fibers\ThreadPoolFiber.cs" />
     <Compile Include="Fibers\TimerScheduler.cs" />
