--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -55,7 +55,7 @@
   <property name="app.moma" value="..\..\${folder.references}\MoMA\MoMA.exe" overwrite="false" />
 
   <!-- COMPILE VARIABLES -->
-  <property name="msbuild.configuration" value="Release" overwrite="false" />
+  <property name="msbuild.configuration" value="Debug" overwrite="false" />
   <property name="msbuild.platform" value="Any CPU" overwrite="false" />
 
   <!-- POLICIES -->
