Uppercut is pissing me off

--- a/src/Magnum.FileSystem/Magnum.FileSystem.csproj
+++ b/src/Magnum.FileSystem/Magnum.FileSystem.csproj
@@ -26,10 +26,11 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\FileSystem\</OutputPath>
+    <OutputPath>..\..\build_output\Magnum\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\..\build_output\Magnum\Magnum.FileSystem.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Ionic.Zip">
