--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -48,7 +48,7 @@
   <property name="msbuild.configuration" value="Release" overwrite="false" />
   <property name="msbuild.platform" value="Any CPU" overwrite="false" />
   <!-- This setting allows you to use your own output path by setting to false - this does not work in conjuction with multitargeting -->
-  <property name="msbuild.override_output_path" value="false" overwrite="false" />
+  <property name="msbuild.override_output_path" value="true" overwrite="false" />
 
   <!-- POLICIES -->
   <property name="file.installation_document" value="..\${folder.documentation}\Installation\${project.name}Installation.doc" overwrite="false" />
