--- a/src/Magnum.RulesEngine.Specs/Magnum.RulesEngine.Specs.csproj
+++ b/src/Magnum.RulesEngine.Specs/Magnum.RulesEngine.Specs.csproj
@@ -45,7 +45,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\build_output\Tests\</OutputPath>
+    <OutputPath>..\..\tests\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
