updating uppercut to rev346 and adding in some custom work to get the separated folders

--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -3,7 +3,7 @@
   <!-- Project UppercuT - http://projectuppercut.org -->
   <!-- Learn how to edit this file at http://uppercut.pbwiki.com -->
 
-  <!-- PROJECT VARIABLES -->
+  <!-- Required Items -->
   <property name="project.name" value="Magnum" overwrite="false" />
   <property name="path_to_solution" value=".\src" overwrite="false" />
   <property name="repository.path" value="git://github.com/phatboyg/Magnum.git" overwrite="false" />
@@ -23,8 +23,8 @@
   <property name="folder.file_server" value="file.server" overwrite="false" />
 
   <!-- FRAMEWORKS -->
-  <!-- microsoft.framework: vb6, net-1.1, net-2.0, net-3.5, net-4.0 (Enter multiple ones with a "," to take advantage of multitargeting) -->
-  <property name="microsoft.framework" value="net-3.5" overwrite="false" />
+  <!-- microsoft.framework (NOT the version you may be targeting!): vb6, net-1.1, net-2.0, net-3.5, net-4.0 (Enter multiple ones with a "," to take advantage of multitargeting) -->
+  <property name="microsoft.framework" value="net-4.0" overwrite="false" />
   <!-- language.short: vb,cs -->
   <property name="language.short" value="cs" overwrite="false" />
   <!-- test.framework: none, mbunit2, nunit, gallio - with gallio it must be installed in program files on every computer. Alternatively you can add 26MB to your repo and put it there. Little much for my tastes. -->
@@ -45,10 +45,10 @@
   <property name="sign.key.relative_path_from_projects" value="..\..\" overwrite="false" />
 
   <!-- COMPILE VARIABLES -->
-  <property name="msbuild.configuration" value="Release" overwrite="false" />
-  <property name="msbuild.platform" value="Any CPU" overwrite="false" />
+  <property name="msbuild.configuration" value="Build" overwrite="false" />
+  <property name="msbuild.platform" value="Mixed Platforms" overwrite="false" />
   <!-- This setting allows you to use your own output path by setting to false - this does not work in conjuction with multitargeting -->
-  <property name="msbuild.override_output_path" value="true" overwrite="false" />
+  <property name="msbuild.override_output_path" value="false" overwrite="false" />
 
   <!-- POLICIES -->
   <property name="file.installation_document" value="..\${folder.documentation}\Installation\${project.name}Installation.doc" overwrite="false" />
@@ -66,6 +66,7 @@
   <property name="app.ncover.tester" value="C:\Program Files (x86)\Gallio\bin\Gallio.Host.exe" overwrite="false" if="${test.framework=='gallio'}" />
   <property name="app.ndepend" value="C:\Program Files\NDepend\NDepend.Console.exe" overwrite="false" />
   <property name="app.moma" value="..\..\${folder.references}\MoMA\MoMA.exe" overwrite="false" />
+  <property name="app.nitriq" value="C:\Program Files (x86)\NimblePros\Nitriq Console + Pro\Nitriq.Console.exe" overwrite="false" />
   <property name="allow.powershell.unrestricted" value="false" overwrite="false" />
   <property name="run.ilmerge" value="false" overwrite="false" />
 
